--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,7 @@
 	/* FOOTER */
 	
 	
-	#footer { width: 100%; padding: 10px 0 0 0; background: #2d2d2d; border-top: 8px solid #222; }
+	#footer { width: 100%; padding: 10px 0 0 0; background: #2d2d2d; border-top: 0px solid #222; }
 	#footer.litex { background: #fafafa;  border-top: 6px solid #e9e9e9; }
 	.footer-in { margin: 0 auto; padding-bottom: 50px; color: #ccc; position: relative; }
 	.footer-in .columns { margin-top: 20px; }
@@ -158,7 +158,7 @@
 	.contact-inf span { display: block; color: #9b9b9b; font-family: Arial; font-size: 14px; }
 	.contact-inf i { margin-right: 5px; color: #474747; }
 	.contact-inf form { margin-top: 20px; }
-	.footer-in .contact-inf input, .footer-in .contact-inf textarea { display: block; min-width: 97%; margin: 10px 0; background: #2b2928; color: #ccc; border: none; font-family: Arial, Helvetica, sans-serif; font-size: 12px; padding: 6px 0px 6px 12px; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; -webkit-box-shadow: inset 0 0 3px 1px #222, 1px 1px #424242; -moz-box-shadow: inset 0 0 3px 1px #222, 1px 1px #424242; box-shadow: inset 0 0 3px 1px #222, 1px 1px #424242; }
+	.footer-in .contact-inf input, .footer-in .contact-inf textarea { display: block; min-width: 97%; margin: 10px 0; background: rgba(43, 41, 40, 0.61); color: #ccc; border: none; font-family: Arial, Helvetica, sans-serif; font-size: 12px; padding: 6px 0px 6px 12px; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; -webkit-box-shadow: inset 0 0 3px 1px #222, 1px 1px #424242; -moz-box-shadow: inset 0 0 3px 1px #222, 1px 1px #424242; box-shadow: inset 0 0 0px 0px #222, 0px 0px #424242; }
 	.footer-in .contact-inf button { padding: 10px 20px; font-size: 12px; font-weight: 400; -webkit-border-radius: 20px; -moz-border-radius: 20px; border-radius: 20px; background: #373737; background: -moz-linear-gradient(top, #373737, #252525); background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #373737), color-stop(100%, #252525)); background: -webkit-linear-gradient(top, #373737, #252525); background: -ms-linear-gradient(top, #373737, #252525); background: -o-linear-gradient(top, #373737, #252525); background: linear-gradient(top, #373737, #252525); border: none; float: right; }
 	.footer-in a:hover { color: #85b940; }
 	#footer.litex .footer-in a { color: #0093d0; }
